--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -16,6 +16,7 @@
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
+    <input type="button" value=Basket id="basket" onclick="location.href='/basket';">
     <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
 
   </header>
@@ -36,7 +37,7 @@
         <input type="hidden" name="sellerid" value=<%=sellerid %>>
         <input type="hidden" name="id" value=<%=id %>>
         <input type="hidden" name="price" value=<%=price %>>
-        <input class="btnAchter" type="submit" value="Acheter pour <%= price %> €">
+        <input class="btnAchter" type="submit" value="Ajouter au panier">
       </form>
       <p class="resume">
         <%= desc %>
@@ -48,6 +49,9 @@
       <h4 class="SELLER">Seller: </h4>
       <p>
         <%= seller %>
+      </p>
+      <p>
+        <%= price %> €
       </p>
       <div class="Star">
         <% for(let i=0; i < rate; i++){ %>
