--- a/private/index.ejs
+++ b/private/index.ejs
@@ -14,6 +14,7 @@
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
+    <input type="button" value=Basket id="basket" onclick="location.href='/basket';">
     <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
 
   </header>
@@ -32,18 +33,18 @@
   </div>
 
   <% if(viewPref) { %>
-   <!-- horizontal view -->
-    
-   <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
+    <!-- horizontal view -->
+
+    <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
       <option value="" selected="selected" hidden="hidden">Order By</option>
       <option value="name">Name</option>
       <option value="price">Price</option>
       <option value="date">Date</option>
     </select>
-  
+
     <div class="catalogueH">
       <img class="arrow" src="/private/images/FlêcheG.png" alt="">
-  
+
       <% articleList.forEach(function(article){ %>
         <div class="itemsH">
           <p class="Book_name">
@@ -64,49 +65,49 @@
             Acheter
           </button>
         </div>
-      <% }) %>
+        <% }) %>
     </div>
 
 
-  <% } else { %>  
-    <!-- vertical view -->
-    
-    <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
-      <option value="" selected="selected" hidden="hidden">Order By</option>
-      <option value="name">Name</option>
-      <option value="price">Price</option>
-      <option value="date">Date</option>
-    </select>
-  
-    <div class="catalogueV">
-      <img class="arrow" src="/private/images/FlêcheG.png" alt="">
-  
-      <% articleList.forEach(function(article){ %>
-        <div class="itemsV">
-          <p class="Book_name">
-            <%= article.title %>
-          </p>
-          <img src=<%=article.image %> alt="Syllabus-image" class="booksV">
-          <div class="info">
-            <h2>
-              <%= article.price %> €
-            </h2>
-            <h2>
-              <%= article.desc %>
-            </h2>
-            <h2> vendu par <%= article.seller %>
-            </h2>
+    <% } else { %>
+      <!-- vertical view -->
+
+      <select class="order" name="order" id="sortMode" onchange="location.href='/?tri='+this.value">
+        <option value="" selected="selected" hidden="hidden">Order By</option>
+        <option value="name">Name</option>
+        <option value="price">Price</option>
+        <option value="date">Date</option>
+      </select>
+
+      <div class="catalogueV">
+        <img class="arrow" src="/private/images/FlêcheG.png" alt="">
+
+        <% articleList.forEach(function(article){ %>
+          <div class="itemsV">
+            <p class="Book_name">
+              <%= article.title %>
+            </p>
+            <img src=<%=article.image %> alt="Syllabus-image" class="booksV">
+            <div class="info">
+              <h2>
+                <%= article.price %> €
+              </h2>
+              <h2>
+                <%= article.desc %>
+              </h2>
+              <h2> vendu par <%= article.seller %>
+              </h2>
+            </div>
+            <button class="acheterV" onclick="location.href='/buy?artID=<%= article.id %>';">
+              Acheter
+            </button>
           </div>
-          <button class="acheterV" onclick="location.href='/buy?artID=<%= article.id %>';">
-            Acheter
-          </button>
-        </div>
-      <% }) %>
-    </div>
+          <% }) %>
+      </div>
 
 
-  <% } %>
-  
+      <% } %>
+
 </body>
 
 </html>
