--- a/private/sell.ejs
+++ b/private/sell.ejs
@@ -14,6 +14,7 @@
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
+    <input type="button" value=Basket id="basket" onclick="location.href='/basket';">
     <!-- lien pour upload img: https://www.bezkoder.com/node-js-upload-image-mysql/ -->
     <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
 
