--- a/private/buy.ejs
+++ b/private/buy.ejs
@@ -16,7 +16,7 @@
 
     <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
-    <input type="button" value=Basket id="basket" onclick="location.href='/basket';">
+    <input type="button" value=🛒 id="basketLogo" onclick="location.href='/basket';">
     <input type="button" value=<%=user %> id="connexion" onclick="location.href='/login';">
 
   </header>
