Add 'my purchases' on profil page and rework of css of the profil page

--- a/private/profil.ejs
+++ b/private/profil.ejs
@@ -15,92 +15,140 @@
         <h1 class="title"><a href="/" id="title_link">SyllaExchange</a></h1>
 
         <input type="button" value=🛒 id="basketLogo" onclick="location.href='/basket';">
-
     </header>
 </head>
 
 <body>
     <hr>
 
-    <main>
-        <div class="login_signup_form">
-            <h2 class="text"><strong>My Account</strong></h2>
-
-            <form action="/profil" method="post" class="line">
-                <label for="new_username">New Username: </label>
-                <input type="text" id="new_username" name="new_username" placeholder=<%=user %> required/>
-                <button class="btn-success" type="submit" name="modify" value="username">Modify</button>
-            </form>
-
-            <form action="/profil" method="post" class="line">
-                <label for="new_email">New Email: </label>
-                <input type="email" id="new_email" name="new_email" placeholder=<%=email %> required/>
-                <button class="btn-success" type="submit" name="modify" value="email">Modify</button>
-            </form>
-
-            <form action="/profil" method="post" class="line">
-                <label for="new_password">New Password: </label>
-                <input type="password" id="new_password" name="new_password" placeholder="New Password" required />
-                <button class="btn-success" type="submit" name="modify" value="password">Modify</button>
-            </form>
-
-            <form action="/profil" method="post" class="line">
-                <label for="new_money">New Money: </label>
-                <input type="number" min="0" id="new_money" name="new_money" placeholder=<%=money %> required/>
-                <button class="btn-success" type="submit" name="modify" value="money">Modify</button>
-            </form>
-
+    <main class="container">
+        <table cellspacing="10" class="wrapper">
             <div>
-                <form action="/profil" method="post">
-                    <button class="btn-success" type="submit" name="logout" value="logout">Logout</button>
-                </form>
-
-                <div>
-                    <h2 class="text"><strong>Settings</strong></h2>
-
-                    <form action="/profil" method="post" class="line">
-                        <label for="night_mode">Night mode: </label>
-
-                        <% if(nightMode) { %>
-                            <input type="checkbox" id="night_mode" name="night_mode" checked>
-                            <% } else { %>
-                                <input type="checkbox" id="night_mode" name="night_mode">
-                                <% } %>
-
-                                    <button class="btn-success" type="submit" name="modify"
-                                        value="nightMode">Modify</button>
-                    </form>
-                    <br>
-                    <form action="/profil" method="post" class="line">
-                        <label for="privateEmail">Only show pseudo (otherwise email): </label>
-
-                        <% if(privateEmail) { %>
-                            <input type="checkbox" id="privateEmail" name="privateEmail" checked>
-                            <% } else { %>
-                                <input type="checkbox" id="privateEmail" name="privateEmail">
-                                <% } %>
-
-                                    <button class="btn-success" type="submit" name="modify"
-                                        value="privateEmail">Modify</button>
-                    </form>
-                    <br>
-                    <form action="/profil" method="post" class="line">
-                        <label for="horizontalView">Horizontal view </label>
-
-                        <% if(horizontalView) { %>
-                            <input type="checkbox" id="viehorizontalVieww" name="horizontalView" checked>
-                            <% } else { %>
-                                <input type="checkbox" id="horizontalView" name="horizontalView">
-                                <% } %>
-
-                                    <button class="btn-success" type="submit" name="modify"
-                                        value="horizontalView">Modify</button>
-                    </form>
-
-                </div>
+                <tr>
+                    <td>
+                        <h2><strong><u>My Account</u></strong></h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="new_username">New Username: </label>
+                            <input type="text" id="new_username" name="new_username" placeholder=<%= user %> required/>
+                            <button class="btn-success" type="submit" name="modify" value="username">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="new_email">New Email: </label>
+                            <input type="email" id="new_email" name="new_email" placeholder=<%= email %> required/>
+                            <button class="btn-success" type="submit" name="modify" value="email">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="new_password">New Password: </label>
+                            <input type="password" id="new_password" name="new_password" placeholder="New Password" required />
+                            <button class="btn-success" type="submit" name="modify" value="password">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="new_money">New Money: </label>
+                            <input type="number" min="0" id="new_money" name="new_money" placeholder=<%= money %> required/>
+                            <button class="btn-success" type="submit" name="modify" value="money">Modify</button>
+                        </form>
+                    </td>
+                </tr>
             </div>
 
+            <div>
+                <tr>
+                    <td>
+                        <h2><strong><u>Settings</u></strong></h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="night_mode">Night mode: </label>
+    
+                            <% if(nightMode) { %>
+                                <input type="checkbox" id="night_mode" name="night_mode" checked>
+                            <% } else { %>
+                                    <input type="checkbox" id="night_mode" name="night_mode">
+                            <% } %>
+    
+                            <button class="btn-success" type="submit" name="modify" value="nightMode">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="privateEmail">Only show pseudo (otherwise email): </label>
+    
+                            <% if(privateEmail) { %>
+                                <input type="checkbox" id="privateEmail" name="privateEmail" checked>
+                            <% } else { %>
+                                <input type="checkbox" id="privateEmail" name="privateEmail">
+                            <% } %>
+    
+                            <button class="btn-success" type="submit" name="modify" value="privateEmail">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <label for="horizontalView">Horizontal view </label>
+    
+                            <% if(horizontalView) { %>
+                                <input type="checkbox" id="viehorizontalVieww" name="horizontalView" checked>
+                            <% } else { %>
+                                <input type="checkbox" id="horizontalView" name="horizontalView">
+                            <% } %>
+    
+                            <button class="btn-success" type="submit" name="modify" value="horizontalView">Modify</button>
+                        </form>
+                    </td>
+                </tr>
+            </div>
 
+            <div>
+                <tr>
+                    <td>
+                        <h2><strong><u>My purchases</u></strong></h2>
+                    </td>
+                </tr>
+                <table cellspacing="10" class="wrapper">
+
+                    <% purchases.forEach(function(article){ %>
+                        <tr class="case">
+                            <td>
+                                <img class="book-img" src=<%=article.image %> alt="article image">
+                            </td>
+                            <td>
+                                <strong><u><h2 class="book_name"><%=article.title %></h2></u></strong>
+                            </td>
+                            <td>
+                                <div class="info">
+                                    <h2><%=article.price %>€</h2>
+                                    <h4><%=article.desc %></h4>
+                                    <h4>Selled by:<br> <%=article.seller %></h4>
+                                </div>
+                            </td>
+                        </tr>
+                    <% }) %>
+                </table>
+            </div>
+
+        </table>
     </main>
 
 </body>
