Add logout bouton

--- a/private/profil.ejs
+++ b/private/profil.ejs
@@ -65,6 +65,13 @@
                         </form>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <form action="/profil" method="post">
+                            <button class="btn-logout" type="submit" name="logout" value="logout">Logout</button>
+                        </form>
+                    </td>
+                </tr>
             </div>
 
             <div>
