--- a/private/style.css
+++ b/private/style.css
@@ -423,6 +423,17 @@ header {
   height: 30px;
 }
 
+.btn-logout {
+  border: rgb(95, 4, 4) 1.5px solid;
+  border-radius: 30px;
+  background-image: linear-gradient(rgb(59, 59, 54), rgb(8, 8, 8));
+  color: rgb(223, 215, 213);
+  cursor: pointer;
+  float: right;
+  width: 80px;
+  height: 30px;
+}
+
 .container {
   margin-left: 20%;
   margin-right: 20%;
